# airbyte-k8s-operator

./: .gitignore  .licenserc.yaml  .readthedocs.yaml  .trivyignore  .woke.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  charmcraft.yaml  generate-airbyte-auth-secrets.sh  pyproject.toml  requirements.txt  tox.ini
.github/: .copilot-collections.yaml
.github/workflows/: automatic-doc-checks.yml  build_rock.yaml  integration_test.yaml  markdown-style-checks.yml  promote_charm.yaml  publish_charm.yaml  test.yaml  test_terraform_modules.yaml
airbyte_rock/: rockcraft.yaml
airbyte_rock/local-files/: pod-sweeper.sh
airbyte_rock/patches/: cors-disable.patch  db-jooq.patch  disable-auth.patch  vite-config-http.patch
docs/: conf.py  index.md  index.rst
docs/explanation/: architecture.md
docs/how-to/: index.rst  secure-airbyte-deployments.md  secure-airbyte-deployments.rst
docs/media/: architecture.excalidraw
docs/reference/: architecture.md  architecture.rst  index.md  index.rst
docs/tutorial/: 01-get-started.rst  02-environment-setup.rst  03-deploy-supporting-charms.md  03-deploy-supporting-charms.rst  04-deploy-airbyte.md  04-deploy-airbyte.rst  index.md  index.rst
documentation/: .custom_wordlist.txt  Makefile  conf.py  index.md  requirements.txt
documentation/.sphinx/: .pre-commit-config.yaml  update_sp.py
documentation/explanation/: architecture.md
documentation/how-to/: index.md  secure-airbyte-deployments.md
documentation/reference/: architecture.md
documentation/tutorial/: 01-get-started.md  02-environment-setup.md  03-deploy-supporting-charms.md  04-deploy-airbyte.md
src/: charm.py  charm_helpers.py  connections.py  literals.py  s3_helpers.py  structured_config.py  template_utils.py  utils.py
src/grafana_dashboards/: airbyte.json.tmpl
src/relations/: airbyte_ui.py  minio.py  postgresql.py  s3.py
src/scripts/: pod-sweeper.sh
templates/: flags.jinja
terraform/charm/: README.md  main.tf  outputs.tf  variables.tf
terraform/charm/tests/: main.tftest.hcl
terraform/modules/minio/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/postgresql-k8s/: README.md  main.tf  outputs.tf  terraform.tf  variables.tf
terraform/modules/temporal-k8s/: README.md  (+3 more)
terraform/product/: README.md  locals.tf  main.tf  outputs.tf  variables.tf
tests/: conftest.py
tests/integration/: conftest.py  helpers.py  test_charm.py  test_scaling.py  test_upgrade.py
tests/unit/: __init__.py  test_charm.py  test_state.py  test_structured_config.py  test_template_utils.py
(+12 files in other folders)
