# Copyright 2024 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "airbyte-k8s"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ops ~= 3.7",
    "pydantic ~= 2.13",
    "boto3 == 1.34.31",
    "serialized-data-interface == 0.7.0",
    "charmed-kubeflow-chisme == 0.3.0",
    "kubernetes == 24.2.0",
    "jinja2 ~= 3.1",
    "cosl >= 0.0.50",
    "charmlibs-interfaces-otlp >= 0.5.0",
]

[dependency-groups]
test = [
    "pytest",
    "coverage[toml]",
    "ops[testing]",
]
fmt = [
    "black==23.12.1",
    "isort==5.10.1",
]
lint = [
    "mypy",
    "pylint",
    "pydocstyle",
    "pytest",
    "ops[testing]",
    "black==23.12.1",
    "codespell==2.2.1",
    "flake8==7.0.0",
    "flake8-builtins==3.0.0",
    "flake8-copyright==0.2.4",
    "flake8-docstrings==1.7.0",
    "isort==5.10.1",
    "pep8-naming==0.13.2",
    "pyproject-flake8==7.0.0",
    "flake8-docstrings-complete>=1.0.3",
    "flake8-test-docs>=1.0",
]
static = [
    "bandit[toml]",
]
integration = [
    "jubilant==1.8.0",
    "pytest==7.1.3",
    "requests==2.32.3",
    "PyYAML==6.0.1",
    "temporalio==1.6.0",
]

[tool.uv]
# The charm is deployed as source (not installed as a package), so uv only
# manages dependencies, not a build of this project itself.
package = false

[tool.bandit]
exclude_dirs = ["/.venv/"]
[tool.bandit.assert_used]
skips = ["*/*test.py", "*/test_*.py", "*tests/*.py"]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Formatting tools configuration
[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"

# Linting tools configuration
[tool.flake8]
max-line-length = 120
max-doc-length = 99
max-complexity = 10
exclude = [".git", "__pycache__", ".tox", "build", "dist", "*.egg_info", ".venv"]
select = ["E", "W", "F", "C", "N", "R", "D", "H"]
# Ignore W503, E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
ignore = ["W503", "E501", "D107"]
# D100, D101, D102, D103: Ignore missing docstrings in tests
per-file-ignores = ["tests/*:D100,D101,D102,D103,D104"]
docstring-convention = "google"
# Check for properly formatted copyright header in each file
copyright-check = "True"
copyright-author = "Canonical Ltd."
copyright-regexp = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+%(author)s"
